--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-braintree-noncehelper",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React native module to get payment nonce for credit, debit cards",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/codemare618/rn-braintree-noncehelper#readme",
   "publishConfig": {
+    "cache": "cache/.npm",
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
